# tryOgreQt

./: CMakeLists.txt  OgreContext.cpp  OgreContext.h  OgreWidget.cpp  OgreWidget.h  README.md  main.cpp  resources.cfg
